# pico_pet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  requirements-stt.txt  requirements.txt
docs/: openjtalk_fix_update.md  openjtalk_handoff.md
include/: kws_model.h  kws_model_weights.h  speech_features_test_data.h  wakeword.h
lib/AMOLED/: AMOLED_1in8.c  AMOLED_1in8.h
lib/Config/: DEV_Config.c  DEV_Config.h
lib/GUI/: GUI_Paint.c  GUI_Paint.h
lib/QSPI_PIO/: qspi.pio  qspi.pio.h
lib/Touch/: FT3168.c  FT3168.h
lib/audio_pio/: CMakeLists.txt  audio_pio.c  audio_pio.h  audio_pio.pio  audio_pio.pio.h
lib/es8311/: CMakeLists.txt  es8311.c  es8311.h
models/kws_tiny/: feature_config.json  labels.json  model_int8.tflite
pets/: CMakeLists.txt
scripts/: classify_samples_stt.py  collect_sample.py  collect_unclassified.py  export_kws_dense.py  generate_speech_feature_test_data.py  generate_tts_pcm.py  generate_tts_wavs.py  inspect_tflite.py  inspect_wav.py  pet_spritesheet_to_bins.py  play_wav.py  predict_kws.py  predict_kws_tiny.py  record_wav.py  speech_features.py  test_speech_features.py  tflite_to_c_array.py  train_kws.py  train_kws_logmel.py  train_kws_tiny.py
src/: kws_model.c  kws_model_weights.c  wakeword_stub.c
tools/openjtalk/: LICENSE.txt  README.md
tts/: input.txt
